<resources>
    <string name="title">Lab5_22520399</string>
    <string name="from_xml">From XML</string>
    <string name="from_code">From CODE</string>
    <string name="fade_in">FADE IN</string>
    <string name="fade_out">FADE OUT</string>
    <string name="blink">BLINK</string>
    <string name="zoom_in">ZOOM IN</string>
    <string name="zoom_out">ZOOM OUT</string>
    <string name="rotate">ROTATE</string>
    <string name="move">MOVE</string>
    <string name="slide_up">SLIDE UP</string>
    <string name="bounce">BOUNCE</string>
    <string name="combine">COMBINE</string>
</resources>
